--- a/style.css
+++ b/style.css
@@ -1,22 +1,25 @@
-body{background:#b87333;color:#f5f5dc;
-     display:flex;flex-direction:column;justify-content:center;align-items: center;}
-.game{width:500px;height:250px;min-width:415px;
-      background: #381c2a;
-      display: flex;justify-content: center;align-items: center;
-      border: 5px solid #d4af37;
-      -webkit-border-radius: 10px 10px 10px 10px;
-      -moz-border-radius: 10px 10px 10px 10px;
-      border-radius: 10px 10px 10px 10px;
-      -webkit-box-shadow: inset 5px 5px 15px 5px #D4AF37; 
-      box-shadow: inset 5px 5px 15px 5px #D4AF37;}
-.pierre, .feuille, .cisors{background:#D4AF37;color: #381c2a;
-        font-weight: bold;
-        padding: 1rem;margin:5px;
-        -webkit-border-radius: 10px 10px 10px 10px;
-        -moz-border-radius: 10px 10px 10px 10px;
-        border-radius: 10px 10px 10px 10px;}
-
-
+body{
+    background:rgba(184, 115, 51,.35);color:rgb(83, 83, 44);
+    display:flex;flex-direction:column;justify-content:center;align-items: center;}
+.game{
+    width:500px;height:250px;min-width:415px;
+    background: rgba(56, 28, 42,.2);
+    display: flex;justify-content: center;align-items: center;
+    border: 5px solid #d4af37;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+    -webkit-box-shadow: inset 5px 5px 15px 5px rgba(212, 175, 55,.2); 
+    box-shadow: inset 5px 5px 15px 5px rgba(212, 175, 55,.2);
+}
+.pierre, .feuille, .cisors{
+    background:#D4AF37;color: #381c2a;
+    font-weight: bold;
+    padding: 1rem;margin:5px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+}
 .puits{color: transparent;
        background: transparent;
        border: none;
